<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/my_layouts_padding"
    android:paddingRight="@dimen/my_layouts_padding">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:ems="7"
            android:text="@string/car_model_car_company"/>
        <EditText
            android:id="@+id/editTextCarCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:ems="7"
            android:text="@string/car_model_model_info"/>
        <EditText
            android:id="@+id/editTextCarModelModelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Name"
            android:layout_marginRight="11dp"
            android:ems="6"/>
        <EditText
            android:id="@+id/editTextCarModelModelCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Code"
            android:ems="6"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:ems="7"
            android:text="@string/car_model_engine_capacity"/>
        <EditText
            android:id="@+id/editTextEngineCapacity"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="11"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:ems="7"
            android:text="@string/car_model_acceleration"/>
        <EditText
            android:id="@+id/editTextAcceleration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:inputType="number"
            android:layout_weight="0.47" />
        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:ems="7"
            android:text="@string/car_model_horse_power"/>
        <EditText
            android:id="@+id/editTextHorsePower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="11"
            android:layout_weight="0.46" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:ems="7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:text="@string/car_model_seats"/>
        <EditText
            android:id="@+id/editTextSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_weight="0.23" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:ems="7"
            android:text="@string/car_model_doors"/>
        <EditText
            android:id="@+id/editTextDoors"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="0.14" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            style="@style/TextViewCategoryStyle"
            android:text="@string/car_model_trunk"/>
        <EditText
            android:id="@+id/editTextTrunkVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:inputType="number"
            android:layout_weight="0.28" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            style="@style/TextViewCategoryStyle"
            android:text="@string/car_model_max_speed"/>

        <SeekBar
            android:id="@+id/seekbarMaxSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foregroundTint="@color/colorMedium"
            android:indeterminate="false"
            android:progress="200"
            android:max="400" />
        <TextView
            android:id="@+id/seekBarInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="200"
            style="@style/TextViewCategoryStyle"
            android:layout_weight="0.04" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            style="@style/TextViewCategoryStyle"
            android:text="@string/car_model_gear_box"/>
        <Spinner
            android:id="@+id/spinnerGearBox"
            android:layout_width="282dp"
            android:layout_height="wrap_content">
        </Spinner>
        <TextView
            android:id="@+id/spinnerInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:ems="7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:text="@string/car_model_turbo"/>
        <CheckBox
            android:id="@+id/checkboxIsTurbo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            style="@style/TextViewCategoryStyle"
            android:text="@string/car_model_convertible"/>
        <CheckBox
            android:id="@+id/checkboxIsConvertible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:ems="7"
            android:text="@string/car_model_kilos_per_meter"/>
        <EditText
            android:id="@+id/editTextKilometersPerTank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="9"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewCategoryStyle"
            android:text="@string/car_model_kilos_per_meter_slash"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            style="@style/TextViewCategoryStyle"
            android:text="@string/car_model_code_needed"/>
        <CheckBox
            android:id="@+id/checkboxCodeNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:id="@+id/textViewCodeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            style="@style/TextViewCategoryStyle"
            android:text="@string/car_model_code_num"/>
        <EditText
            android:id="@+id/editTextCodeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="11"
            android:layout_weight="0.39" />
    </LinearLayout>
</LinearLayout>