<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightest"
    tools:context="com.example.aviya.takeandgo.controller.activity.LoginActivity">
    <!-->material.light<-->

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorDarkest"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:ems="10"
        android:hint="@string/name"
        android:textColor="@color/colorDarkest"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/endLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button"
        android:text="@string/log_in_button"
        android:textColor="@color/colorLightest"
        android:textSize="20dp"
        android:layout_marginTop="53dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />
    <TextView
        android:id="@+id/loginWaitText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wait_while_searching"
        android:textSize="25dp"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/endLoginButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
