<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/my_layouts_padding"
    android:paddingRight="@dimen/my_layouts_padding">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch_number"
            style="@style/TextViewCategoryStyle"/>
         <EditText
           android:id="@+id/editTextBranchNum"
           android:layout_width="wrap_content"
             android:ems="10"
           android:layout_height="wrap_content"
             android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/branch_address"
            android:layout_marginBottom="20dp"
            style="@style/TextViewCategoryStyle"/>
        <EditText
            android:id="@+id/editTextBranchAdrsNum"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="number"
            android:inputType="number"/>
        <EditText
            android:id="@+id/editTextBranchAdrsStreet"
            android:layout_width="wrap_content"
            android:ems="4"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="street"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:paddingLeft="9dp"
            android:paddingRight="3dp"
            style="@style/TextViewCategoryStyle"
            android:text="@string/branch_address_comma"/>
        <EditText
            android:id="@+id/editTextBranchAdrsCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="city"
            android:ems="4"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch_parking_spaces"
            style="@style/TextViewCategoryStyle"/>
        <EditText
            android:id="@+id/editTextBranchParkingSpaces"
            android:layout_width="match_parent"
            android:ems="10"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>
</LinearLayout>