<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/my_layouts_padding"
    android:paddingRight="@dimen/my_layouts_padding">


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/car_model_code"
            android:ems="6"
            style="@style/TextViewCategoryStyle"/>
        <Spinner
            android:id="@+id/carModelSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            style="@style/TextViewCategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="6"
            android:text="@string/car_number" />

        <EditText
            android:id="@+id/editTextFirstSecCarNum"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextViewCategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car_number_separator"
            android:textAlignment="center"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/editTextSecondSecCarNum"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextViewCategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car_number_separator"
            android:textAlignment="center"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/editTextThirdSecCarNum"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_kilometers"
            android:ems="6"
            style="@style/TextViewCategoryStyle"/>
        <EditText
            android:id="@+id/editTextCarKilometers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_home_branch"
                android:ems="6"
                style="@style/TextViewCategoryStyle"/>
           <Spinner
               android:id="@+id/carBranchSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_color"
            android:ems="6"
            style="@style/TextViewCategoryStyle"/>
        <Button
            android:id="@+id/pickColorBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_color"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/colorPickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">
    <LinearLayout
        android:id="@+id/colorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp" />
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/colorLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp" />
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>